--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "googleapis": "^39.2.0",
     "jquery": "^1.9.1",
     "jsonwebtoken": "^8.5.1",
-    "express": "6.13.4",
+    "express": "^4.17.1",
     "mongoose": "^5.9.4",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
